--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.2.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase": "^5.7.2",
     "firebase-admin": "^6.4.0",
     "moment": "^2.24.0",
+    "mongoose": "^5.6.7",
+    "morgan": "^1.9.1",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.8.2",
