--- a/package.json
+++ b/package.json
@@ -5,27 +5,30 @@
   "dependencies": {
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.2.1",
-    "concurrently": "^4.1.1",
+    "bootstrap": "^4.4.1",
+    "concurrently": "^4.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase": "^5.7.2",
-    "firebase-admin": "^6.4.0",
-    "moment": "^2.24.0",
-    "mongoose": "^5.6.7",
-    "morgan": "^1.9.1",
-    "react": "^16.7.0",
+    "firebase": "^5.11.1",
+    "firebase-admin": "^6.5.1",
+    "jquery": "^3.5.1",
+    "moment": "^2.25.3",
+    "mongoose": "^5.9.12",
+    "morgan": "^1.10.0",
+    "popper": "^1.0.1",
+    "react": "^16.13.1",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.8.2",
-    "react-modal": "^3.8.1",
-    "react-redux": "^6.0.0",
+    "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-s-alert": "^1.4.1",
     "react-scripts": "2.1.3",
-    "react-select": "^2.2.0",
-    "redux": "^4.0.1",
+    "react-select": "^2.4.4",
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "tableau-react": "^1.2.0"
+    "tableau-react": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
